--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 		<!-- Create a space where the user information will be displayed -->
 		<div id="display-results">
 			<div id="answer">
+        <div id="guess">
+        </div>
 			</div>
 		</div>
   </body>
